# constants/constants.go
@@ -1,10 +1,11 @@
 package constants
 
 const (
-	GET    = "GET"
-	Movies = "/movies"
-	POST   = "POST"
-
-	PATCH  = "PATCH"
-	DELETE = "DELETE"
+	GET      = "GET"
+	Movies   = "/movies"
+	Theaters = "/theaters"
+	POST     = "POST"
+	ID       = "/:id"
+	PATCH    = "PATCH"
+	DELETE   = "DELETE"
 )
